fixed custom scrollbar fail on accordian hide-show

--- a/themes/twitter/stylesheets/style.css
+++ b/themes/twitter/stylesheets/style.css
@@ -385,7 +385,7 @@ body.alt .thumbnails img {
 }
 .thumbnails img{
   width:400px; height:300px;
-  margin:13px 0px 0px 13px;;
+  margin:14px 0px 0px 13px;;
 }
 
 a.thumbnail:hover {
